--- a/js-es6-map.html
+++ b/js-es6-map.html
@@ -5,7 +5,14 @@ const users = [
 ];
 
 cont result = users.map((user) => {
-	return `${user.firstname} $(user.lastname)`;
+	return `${user.firstname} ${user.lastname}`;
 });
 
 console.log(result);
+
+(3) ["Reinaldo Nani", "Pedro Cabral", "Fred Kruger"]
+0: "Reinaldo Nani"
+1: "Pedro Cabral"
+2: "Fred Kruger"
+length: 3
+__proto__: Array(0)
